# hilbertmap

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: curves.py  encode.py  plot.py
examples/data/depth_npy_meters/: city.npy  living_room.npy  street.npy  studio.npy
src/hilbertmap/: __init__.py  cubewalk.py  mpl.py  transform.py
tests/: test_cube.py  test_mpl.py  test_roundtrip.py  test_transform.py
